# python-anyconfig-cbor-backend

./: .travis.yml  MANIFEST.in  NEWS.txt  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
anyconfig_cbor_backend/: __init__.py  cbor.py  cbor2.py
pkg/: entry_points.txt  nose.cfg  package.spec.in  requirements.txt  runtest.sh  test_requirements-py-2.6.txt  test_requirements.txt
src/anyconfig_cbor_backend/: __init__.py  cbor_.py
tests/: 0.cbor  cbor.py  cbor2.py  plugin.py  requirements.txt  test_cbor.py
tests/backend/: cbor.py  common.py  plugin.py
