# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = anyconfig-cbor-backend
# version = attr: anyconfig_cbor_backend.__version__
description = Backend module for python-anyconfig to load and dump CBOR data
long_description =
    This is a backend module for python-anyconfig to support to load and dump
    CBOR files with using cbor, https://pypi.python.org/pypi/cbor.

    SEE ALSO:

    - python-anyconfig: https://pypi.python.org/pypi/anyconfig
    - CBOR spec: http://cbor.io
    - Download:

      - PyPI: https://pypi.python.org/pypi/anyconfig-cbor-backend
      - Copr RPM repos: https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig-cbor-backend
platforms =
    any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find:

# minimum dependencies.
install_requires =
    anyconfig
    cbor

[options.extras_require]
devel =
    coveralls
    flake8<3.5.0
    mock
    nose
    pylint
    pycodestyle<2.4.0

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
anyconfig_backends =
    cbor = anyconfig_cbor_backend:Parser

# vim:sw=4:ts=4:et:
